<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BookListActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/search_button"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <group android:menuCategory="container">
        <item
            android:id="@+id/action_leng"

            android:title="@string/menu_lenguaje" />
        <item
            android:id="@+id/action_options"

            android:title="@string/menu_search" />
        <item
            android:id="@+id/action_login"

            android:title="@string/menu_login" />

        <item
            android:id="@+id/action_acount"
            android:title="@string/menu_account"
            />
    </group>
</menu>