<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BookDetailActivity"
    tools:showIn="@layout/activity_scrolling">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"><LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1px"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBookCover"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="32sp"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/RateAvs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16sp"
            android:text="@string/rate"/>

        <TextView
            android:id="@+id/tvPageCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:text="@string/duration"/>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/date"/>

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/genres"/>

        <View
            android:id="@+id/view"
            android:layout_width="280dp"
            android:layout_height="1px"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/companies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0px"
            android:layout_marginTop="8dp"
            android:text="@string/CompanyName"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPublisher"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/companies"
            android:textSize="15sp"

            />

        <TextView
            android:id="@+id/cast1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/actors"
            android:textSize="18sp"

            />

        <TextView
            android:id="@+id/cast"
            android:layout_width="250dp"
            android:layout_height="105dp"
            android:text="@string/actor"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="fill_horizontal"
            android:textSize="22sp"
            android:text="@string/overview"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>