<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/BgImage"
            android:layout_width="800dp"
            android:layout_height="200dp"
            />
        <ImageView
            android:id="@+id/ivBookCover"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher_background"
            />

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1px"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/RateAvs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="16sp" />

            <View
                android:id="@+id/view1"
                android:layout_width="280dp"
                android:layout_height="1px"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/tvPageCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_below="@id/view1"
                android:layout_marginRight="5dp"
                />
            <TextView
                android:id="@+id/runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/hours"/>

            </LinearLayout>
            <TextView
                android:id="@+id/releasedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/date"/>

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="18sp" />

            <View
                android:id="@+id/view"
                android:layout_width="280dp"
                android:layout_height="1px"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0px"
                android:layout_marginTop="8dp"
                android:text="@string/CompanyName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/CompanyName"
                android:textSize="15sp"

                />

            <TextView
                android:id="@+id/cast1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Cast"
                android:textSize="18sp"

                />

            <TextView
                android:id="@+id/cast"
                android:layout_width="250dp"
                android:layout_height="105dp"
                android:text="cast"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="fill_horizontal"
                android:textSize="12sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Reviews"
                    android:gravity="center"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Reviews"
                    android:id="@+id/button1"
                    />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>